--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -2,6 +2,7 @@
 @use "functions/utils" as *;
 @use "functions/tokens" as *;
 // TODO remplacer les clés avec tirets par un souligné foo-bar -> foo_bar
+// TODO générer ce fichier à partir d'un json, afin d'avoir les tokens en js
 $xl-tokens: (
     font : (
         family : (
