--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -15,3 +15,4 @@
 @use "./components/toTop" as *;
 @use "./components/separator" as *;
 @use "./components/searchBar" as *;
+@use "./components/searchInput" as *;
