--- a/src/sdg/scss/components/_searchBar.scss
+++ b/src/sdg/scss/components/_searchBar.scss
@@ -1,2 +1,76 @@
-//@use "../../components/SearchBar/searchBar" as *;
-@forward "../../components/SearchBar/searchBar";
+@use "modules/tokens" as *;
+@use "modules/utils" as *;
+@use "modules/grid" as *;
+@use "searchInput" as *;
+
+qc-search-bar {
+  display: block;
+  max-width: rem(640);
+}
+.qc-search-bar {
+  @extend %qc-search-wrapper;
+  width: 100%;
+  border: 0;
+  &:has(input:focus) {
+    [type=submit]::before {
+      inset: 2px 2px 2px 0;
+      border: 0;
+    }
+  }
+  .qc-search-input {
+    margin:0;
+    width: 100%;
+    outline: none!important;
+    &::before {
+      content:none!important;
+    }
+  }
+
+  [type=submit] {
+    z-index: 1;
+    background-color: transparent;
+    &::before {
+      z-index: -1;
+      background: token-value(color blue piv);
+      border: 1px solid token-value(color formfield border);
+      transition: background-color .15s;
+    }
+    &:hover {
+      &::before {
+        background-color: token-value(color blue regular);
+      }
+    }
+    &:active {
+      &::before {
+        background-color: token-value(color blue regular_light);
+      }
+    }
+  }
+}
+
+.qc-search-bar.piv-background {
+  --qc-color-formfield-focus-outline: #{token-value(color blue pale)};
+  [type=submit] {
+    &::before {
+      background: token-value(color background);
+      border-left-width: 0;
+    }
+    &:focus {
+      &::before {
+        border-left-width: 2px;
+        background-color: rgba(token-value(color grey light_rgb), .24);
+      }
+    }
+    &:hover {
+      &::before {
+        background-color: rgba(token-value(color grey light_rgb), .24);
+      }
+    }
+    &:active {
+      &::before {
+        background-color: rgba(token-value(color grey light_rgb), .16);
+      }
+    }
+  }
+}
+
