--- a/src/sdg/scss/functions/_utils.scss
+++ b/src/sdg/scss/functions/_utils.scss
@@ -7,13 +7,14 @@
 /*
 Return rem size from pixel size according to root font-size as define in settings
 Always use this function for rem values
-// root font-size : 100 %,
+
+root font-size : 100 %,
 // foo.scss
 .foo { font-size: rem(16); }
 // foo.css
 .foo { font-size: 1rem; }
 
-// root font-size : 62.5 %,
+root font-size : 62.5 %,
 // foo.scss
 .foo { font-size: rem(16); }
 // foo.css
@@ -40,11 +41,6 @@ Always use this function for rem values
 
 @function google-font($font) {
   @return string.unquote(deep-implode(map.get($google-fonts, $font), ','));
-}
-
-@function getImageUrl($nom, $images: $images) {
-  $image: map-get($images, $nom);
-  @return url('data:image/svg+xml;base64,#{$image}');
 }
 
 @function getImageUrl($nom, $images: $images) {
