--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -210,6 +210,7 @@ root font-size : 62.5 %,
   --qc-color-blue-dark_rgb: 198, 219, 238;
   --qc-color-purple: #B3A5D4;
   --qc-color-grey-pale: #1C2025;
+  --qc-color-grey-light_rgb: 59, 66, 76;
   --qc-color-grey-light: #3B424C;
   --qc-color-grey-regular: #6A7688;
   --qc-color-grey-medium: #8590A8;
