--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -271,6 +271,7 @@ $themes-tokens: (
         purple: #B3A5D4,
         grey : (
             pale : #1C2025,
+            light_rgb: (59, 66, 76),
             light : #3B424C,
             regular: #6A7688,
             medium : #8590A8,
